# for-latex

./: OPEN-ALL-LATEX-FILES.txt  README.md  SAME-LATEX-PDF.txt  gitignore  ignore-for-prod.txt
TeXfacto-ALPHA-DEV/: TODO-FR.txt  pyproject.toml
TeXfacto-ALPHA-DEV/0-POC-0/tns-functab-STY/: texfacto_builder.py
TeXfacto-ALPHA-DEV/0-POC-0/tns-functab-STY/texfacto_builder/: constants.py  finalize.py  tex_doc.py
TeXfacto-ALPHA-DEV/0-POC-0/tns-functab/texfacto_builder/: finalize.py  sty_pack.py
TeXfacto-ALPHA-DEV/0-POC-0/tutodoc-CLS/: texfacto_builder.py  texfacto_main2contrib.py
TeXfacto-ALPHA-DEV/0-POC-0/tutodoc-CLS/texfacto_builder/: __init__.py  cls_proj.py  meta.py  minicss.py  misc.py  pretty_loc.py  sty_proj.py  tex_doc.py
TeXfacto-ALPHA-DEV/0-POC-0/tutodoc-STY/: texfacto_main2contrib.py
TeXfacto-ALPHA-DEV/changes/: TODO-FR.txt
TeXfacto-ALPHA-DEV/changes/dev/2023/: 04.txt  05.txt  12.txt
TeXfacto-ALPHA-DEV/contrib/api/: README.md
TeXfacto-ALPHA-DEV/readme/: about.yaml
TeXfacto-ALPHA-DEV/readme/coc/: about-main-src.md  about-project.md  about.yaml  code-style.md  dirtree.md  main.md
TeXfacto-ALPHA-DEV/src/: __init__.py  texproject.py
TeXfactory/: README.md  about.peuf  about.yaml  pyproject.toml
TeXfactory/changes/: TODO-FR.txt
TeXfactory/changes/2021/: 08.txt  09.txt
TeXfactory/changes/2023/: 04.txt  05.txt
TeXfactory/readme/: about.md  about.peuf  about.yaml  build.md  coc-dirtree.md  coc-doc.md  coc-order.md  coc-path.md  coc-sty.md  coc.md  prologue.md  workflow.md
TeXfactory/readme/coc/: about-code.md  about-final-code.md  about-main-src.md  about-project.md  dirtree.md  main.md
TeXfactory/src/: __init__.py  buildproj.py  texproject.py  update.py  xxx.py
TeXfactory/tools/debug/: build.py  xxx.py
TeXitEasy/: README.md  about.peuf  about.yaml  pyproject.toml  tool_publish.py  versions.yaml
TeXitEasy/changes/: TODO-FR.txt
TeXitEasy/changes/2021/: 08.txt
TeXitEasy/readme/: about.md  about.peuf  about.yaml  escape.md  prologue.md
TeXitEasy/src/: escape.py  latex_use.py  tool_debug.py  tool_escape.py
TeXitEasy/src/tool_config/: escape.peuf
TeXitEasy/tests/escape/: fstringit.peuf  test_escape.py  test_fstringit.py
TeXitEasy/texiteasy/: README.md  __init__.py  escape.py
TeXitEasy/tools/debug/: escape_this.py  fstringit_this.py
(+1462 files in other folders)
