[tool.poetry]
name = "texiteasy"
version = "0.0.0-beta"
description = "This project contains tools to work with LaTeX."
authors = ["Christophe BAL"]
license = "GNU License Version 3"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
