[tool.poetry]
name         = "texiteasy"
version      = "0.0.1-beta"
description  = "This project contains tools to work with LaTeX."
readme       = "README.md"
authors      = ["Christophe BAL"]
maintainers  = ["Christophe BAL"]
license      = "GNU License Version 3"
repository   = "https://github.com/projetmbc/tools-for-latex/tree/master/TeXitEasy"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
